8241486: G1/Z give warning when using LoopStripMiningIter and turn off LoopStripMiningIter (0)

Reviewed-by: thartmann, kvn